--- a/main_site/templates/base_template.html
+++ b/main_site/templates/base_template.html
@@ -30,6 +30,7 @@
                 </div>
                 <div class="col-4 d-flex justify-content-end align-items-center">
                     {% if user.is_authenticated or user.id %}
+                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'shop_card' user.id %}">Корзина({{ card_products_count }})</a>
                         <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_page' user.id %}">Профиль</a>
                         <a class="btn btn-sm btn-outline-secondary" href="{% url 'auth_signout' %}">Выйти</a>
                     {% else %}
