--- a/main_site/templates/base_template.html
+++ b/main_site/templates/base_template.html
@@ -18,34 +18,34 @@
         {% endblock %}
     </head>
     <body>
-    <div style="background: #f5f5f5;">
+    <div style="background: rgb(255, 255, 255);">
         <div class="container">
             <header class="blog-header py-3">
             <div class="row flex-nowrap justify-content-between align-items-center border-bottom">
                 <div class="col-4 pt-1">
-                    <a class="text-muted" href="/">Главная</a>
+                    <a class="btn btn-sm btn-outline-danger" href="/">Главная</a>
                 </div>
-                <div class="col-4 text-center" style="height: 50px;">
-                    <a class="blog-header-logo text-dark" href="{{ request.get_full_path }}"><img src="https://livedemo00.template-help.com/wt_58883_v1/images/logo-dark.png" alt="Logo"></a>
+                <div class="col-4 text-center" style="height: 55px;">
+                    <a class="blog-header-logo text-dark" href="{{ request.get_full_path }}"><img src="{% static "images/logo.png" %}" alt="Logo" width="200" height="50"></a>
                 </div>
                 <div class="col-4 d-flex justify-content-end align-items-center">
                     {% if user.is_authenticated or user.id %}
-                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'shop_card' user.id %}">Корзина({{ card_products_count }})</a>
-                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'user_page' user.id %}">Профиль</a>
-                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'auth_signout' %}">Выйти</a>
+                        <a class="btn btn-sm btn-outline-danger" href="{% url 'shop_card' user.id %}">Корзина({{ card_products_count }})</a>
+                        <a class="btn btn-sm btn-outline-danger" href="{% url 'user_page' user.id %}">Профиль</a>
+                        <a class="btn btn-sm btn-outline-danger" href="{% url 'auth_signout' %}">Выйти</a>
                     {% else %}
-                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'auth_page' %}">Вход</a>
-                        <a class="btn btn-sm btn-outline-secondary" href="{% url 'auth_page' %}">Регистрация</a>
+                        <a class="btn btn-sm btn-outline-danger" href="{% url 'auth_page' %}">Вход</a>
+                        <a class="btn btn-sm btn-outline-danger" href="{% url 'auth_page' %}">Регистрация</a>
                     {% endif %}
                 </div>
             </div>
         </header>
         <div class="nav-scroller py-1 mb-2">
             <nav class="nav d-flex justify-content-between">
-                <a class="p-2 text-muted" href="#">Мастер-классы</a>
-                <a class="p-2 text-muted" href="#">Магазины</a>
-                <a class="p-2 text-muted" href="#">Пользователи</a>
-                <a class="p-2 text-muted" href="#">Помощь</a>
+                <a class="btn btn-danger" href="#">Мастер-классы</a>
+                <a class="btn btn-danger" href="#">Магазины</a>
+                <a class="btn btn-danger" href="#">Пользователи</a>
+                <a class="btn btn-danger" href="#">Помощь</a>
             </nav>
         </div>
         </div>
