--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -37,78 +37,89 @@
 
 <!-- Подключение блока с основным контентом -->
 {% block content %}
-<div style="background-image: url('https://livedemo00.template-help.com/wt_58883_v1/images/home-01-1920x1028.jpg'); background-size: cover;">
+<div style="min-height: 500px;">
+    <div class="container" style="text-align: center; padding: 60px 0;">
+            <img src="static/images/logo (1).png" alt="{{ product.description }}" height="300px" width="500px" >
+    </div>
+</div>
+<div style="background-image: url('static/images/flat.jpg'); background-size: cover;">
     <div class="container" style="font-family: 'Oswald', sans-serif;">
         <h3 class="text-center ts" style="padding: 60px 0; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Лучшие магазины <span style="letter-spacing: -5px;">--------------------</span></h3>
-        <div class="row" style="min-height: 400px;">
+        <div class="row" style="min-height: 340px;">
             {% for shop in shops %}
                 <div class="col-12 col-md-3">
-                    <div class="text-center border-left" style="background: #f5f5f5; height: 300px; border-radius: 8px; margin-bottom: 25px;">
+                    <div class="text-center border-left" style="background: #fffffffb; height: 300px; border-radius: 8px; margin-bottom: 25px;">
                         <p style="font-size: 30px; padding: 15px 0;"><a href="#">{{ shop.name }}</a></p>
                         <p style="height: 100px;">{{ shop.description }}</p>
                         <p style="height: 20px;">Рейтинг: {{ shop.rating }}</p>
                         <hr>
-                        <a href="{% url 'shop' shop.id %}" class="btn btn-lg btn-success">Перейти</a>
+                        <a href="{% url 'shop' shop.id %}" class="btn btn-lg btn-danger">Перейти</a>
                     </div>
                 </div>
             {% endfor %}
         </div>
-        <div class="text-center"><a href="{% url 'all_shops' %}" class="btn btn-success">Все магазины</a></div>
+        <div class="text-center" style="padding-bottom: 40px;"><a href="{% url 'all_shops' %}" class="btn btn-danger">Все магазины</a></div>
     </div>
 </div>
-<div style="min-height: 700px;">
-    <div class="container" style="font-family: 'Oswald', sans-serif;">
+<div style="min-height: 750px;">
+    <div class="container" style="font-family: 'Oswald', sans-serif; ">
         <h3 class="text-center ts" style="padding: 60px 0; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Лучшие товары <span style="letter-spacing: -5px;">--------------------</span></h3>
         <div class="row" style="min-height: 400px;">
             {% for product in products %}
                 <div class="col-12 col-md-3">
-                    <div class="text-center border" style="background: #f5f5f5; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
+                    <div class="text-center border" style="background: #afaeae54; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
                         <div style="height: 230px; margin-top: 15px;">
                             <img src="{% static product.photo_filename.url %}" alt="{{ product.description }}" height="230px" width="230px">
                         </div>
                         <p style="font-size: 30px; padding: 10px 0;"><a href="#">{{ product.name }}</a></p>
-                        <p>{{ product.description }}</p>
+                        <div style="height: 77px;">
+                            <p style="overflow: hidden;
+                                   text-overflow: ellipsis;
+                                   display: -webkit-box;
+                                   -webkit-line-clamp: 3; /* number of lines to show */
+                                   -webkit-box-orient: vertical;">{{ product.description }}</p>
+                        </div>
                         <p style="height: 20px;">Рейтинг: {{ product.rating }}</p>
                         <hr>
-                        <a href="{% url 'product' product.id %}" class="btn btn-lg btn-success" style="margin-bottom: 15px;">Купить</a>
+                        <a href="{% url 'product' product.id %}" class="btn btn-lg btn-danger" style="margin-bottom: 15px;">Купить</a>
                     </div>
                 </div>
             {% endfor %}
         </div>
     </div>
 </div>
-<div style="background-image: url('https://livedemo00.template-help.com/wt_58883_v1/images/home-04-1920x1230.jpg'); background-size: cover; min-height: 700px;">
+<div style="background-image: url('static/images/floral.jpg'); background-size: cover; min-height: 700px;" >
     <div class="container" style="font-family: 'Oswald', sans-serif;">
         <h3 class="text-center ts" style="padding: 60px 0; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Мастер-классы <span style="letter-spacing: -5px;">--------------------</span></h3>
         <div class="row" style="min-height: 200px;">
             {% for mc in mcs %}
                 <div class="col-6 col-md-3">
-                    <div class="text-center border" style="background: #f5f5f5; min-height: 300px; border-radius: 8px; margin-bottom: 25px;">
+                    <div class="text-center border" style="background: #ffffffec; min-height: 300px; border-radius: 8px; margin-bottom: 25px;">
                         <img src="{% static mc.photo %}" alt="{{ mc.title }}" width="230px" style="overflow: hidden; margin-top: 15px;">
                         <h4><a href="{% url 'article' mc.id %}">{{ mc.title }}</a></h4>
-                        <div class="col-12" style="padding: 15px;">
+                        <div class="col-12" style="padding: 15px; height: 160px;">
                             <p style=" overflow: hidden;
                                        text-overflow: ellipsis;
                                        display: -webkit-box;
-                                       -webkit-line-clamp: 8; /* number of lines to show */
+                                       -webkit-line-clamp: 5; /* number of lines to show */
                                        -webkit-box-orient: vertical;">{{ mc.text }}</p>
                         </div>
                     </div>
                 </div>
             {% endfor %}
         </div>
-        <div class="text-center"><a href="#" class="btn btn-success">Все мастер-классы</a></div>
+        <div class="text-center"><a href="#" class="btn btn-danger">Все мастер-классы</a></div>
     </div>
 </div>
-<div style="min-height: 700px;">
+<div style="min-height: 650px;">
     <div class="container" style="font-family: 'Oswald', sans-serif;">
         <h3 class="text-center ts" style="padding: 60px 0; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Рейтинг пользователей <span style="letter-spacing: -5px;">--------------------</span></h3>
         <div class="row" style="min-height: 200px;">
             {% for user in users %}
                 <div class="col-6 col-md-3">
-                    <div class="text-center border" style="background: #f5f5f5; min-height: 300px; border-radius: 8px; margin-bottom: 25px;">
-                        <img src="static/{{ user.image_url }}" alt="{{ user.name }}" width="100px" height="100px">
-                        <h4><a href="{{ user.profile_link }}">{{ user.full_name }}</a></h4>
+                    <div class="text-center border" style="background: #afaeae54; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
+                        <img src="static/{{ user.image_url }}" alt="{{ user.name }}" width="150px" height="200px">
+                        <h4 style="padding: 10px 0;"><a href="{{ user.profile_link }}">{{ user.full_name }}</a></h4>
                         <p style="height: 50px;">{{ user.bio }}</p>
                         <p style="font-size: 24px; padding: 3px 0; height: 30px;"><a href="#">{{ user.shop_name }}</a></p>
                         <p style="height: 20px; margin-top: 20px;">Рейтинг: {{ user.rating }}</p>
