--- a/creative_blog/templates/article.html
+++ b/creative_blog/templates/article.html
@@ -8,7 +8,7 @@
     <div class="container">
         <div class="row">
             <div class="col-12 col-md-12" style="margin: 15px 0;">
-                <a href="{% url 'blog' article.author.id %}" class="btn btn-primary">Назад к блогу</a>
+                <a href="{% url 'blog' article.author.id %}" class="btn btn-dark">Назад к блогу</a>
             </div>
 
             <div class="col-md-8">
@@ -19,19 +19,21 @@
                         <div class="clearfix"></div>
                     </div>
                     <div class="content-grid-single">
-                        <h3>{{ article.title }}</h3>
-                        <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/c696cd68860857.5b6bde69a1299.png" alt="" class="col-12">
-                        <p>{{ article.text }}</p>
+                        <h3 style="text-align: center; color: #000; border: 1px solid lightgray;  background-color: rgba(248, 19, 19, 0.158)">{{ article.title }}</h3>
+                        <div style="border: 1px solid lightgray; background-color:  rgba(255, 255, 255, 0.5);">
+                        <p style="text-align: center;"><img src="/static/images/2.jpg" alt="" class="col-12" style="padding: 10px; height: 350px; width: 300px;"></p>
+                        <p style="color: #000; padding-bottom: 15px; padding-left: 10px; padding-right: 10px;";>{{ article.text }}</p>
+                    </div>
                     </div>
                 </div>
             </div>
             <div class="col-md-4">
                  <div class="col-12">
-                     <div class="col-12 col-md-4" style="margin-top: 10px;">
-                         <img src="https://banner2.cleanpng.com/20180401/kve/kisspng-user-profile-computer-icons-male-id-5ac19772b4d884.3909818215226366587408.jpg" alt="Юзер лого" style="height: 25vh; width: 25vh;">
+                     <div class="col-12 col-md-4" style="margin-top: 10px; ">
+                         <img src="/static/photo5.jpg" alt="Юзер лого" style="height: 25vh; width: 25vh;">
                      </div>
-                     <p>Автор статьи:</p>
-                     <h3>{{ article.author.first_name }} {{ article.author.last_name }}</h3>
+                     <p style="margin-top: 20px;">Автор статьи:</p>
+                     <h3 style="margin-top: 20px;">{{ article.author.first_name }} {{ article.author.last_name }}</h3>
                      <br>
                      <p>Биография: <br>
                          {{ user.bio }}</p>
