--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -42,10 +42,10 @@
             <img src="static/images/logo (1).png" alt="{{ product.description }}" height="300px" width="500px" >
     </div>
 </div>
-<div style="background-image: url('static/images/flat.jpg'); background-size: cover;">
+<div style="background-image: url('static/images/flat.jpg'); background-size: cover; min-height: 700px;">
     <div class="container" style="font-family: 'Oswald', sans-serif;">
-        <h3 class="text-center ts" style="padding: 60px 0; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Лучшие магазины <span style="letter-spacing: -5px;">--------------------</span></h3>
-        <div class="row" style="min-height: 340px;">
+        <h3 class="text-center ts" style="padding-top: 70px; padding-bottom: 30px; font-size: 2rem;"><span style="letter-spacing: -5px;">--------------------</span> Лучшие магазины <span style="letter-spacing: -5px;">--------------------</span></h3>
+        <div class="row" style="min-height: 340px; padding-top: 70px;">
             {% for shop in shops %}
                 <div class="col-12 col-md-3">
                     <div class="text-center border-left" style="background: #fffffffb; height: 300px; border-radius: 8px; margin-bottom: 25px;">
@@ -58,7 +58,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="text-center" style="padding-bottom: 40px;"><a href="{% url 'all_shops' %}" class="btn btn-danger">Все магазины</a></div>
+        <div class="text-center" style="padding-bottom: 40px; padding-top: 50px;"><a href="{% url 'all_shops' %}" class="btn btn-danger">Все магазины</a></div>
     </div>
 </div>
 <div style="min-height: 750px;">
@@ -94,9 +94,9 @@
         <div class="row" style="min-height: 200px;">
             {% for mc in mcs %}
                 <div class="col-6 col-md-3">
-                    <div class="text-center border" style="background: #ffffffec; min-height: 300px; border-radius: 8px; margin-bottom: 25px;">
-                        <img src="{% static mc.photo %}" alt="{{ mc.title }}" width="230px" style="overflow: hidden; margin-top: 15px;">
-                        <h4><a href="{% url 'article' mc.id %}">{{ mc.title }}</a></h4>
+                    <div class="text-center border" style="background: #ffffffec; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
+                        <img src="{% static mc.photo %}" alt="{{ mc.title }}" width="200px" height="250px" style="overflow: hidden; margin-top: 15px;">
+                        <h4 style="padding-top: 5px;"><a href="{% url 'article' mc.id %}">{{ mc.title }}</a></h4>
                         <div class="col-12" style="padding: 15px; height: 160px;">
                             <p style=" overflow: hidden;
                                        text-overflow: ellipsis;
@@ -108,7 +108,7 @@
                 </div>
             {% endfor %}
         </div>
-        <div class="text-center"><a href="#" class="btn btn-danger">Все мастер-классы</a></div>
+        <div class="text-center" style="padding-bottom: 40px;"><a href="#" class="btn btn-danger">Все мастер-классы</a></div>
     </div>
 </div>
 <div style="min-height: 650px;">
@@ -117,11 +117,15 @@
         <div class="row" style="min-height: 200px;">
             {% for user in users %}
                 <div class="col-6 col-md-3">
-                    <div class="text-center border" style="background: #afaeae54; min-height: 400px; border-radius: 8px; margin-bottom: 25px;">
+                    <div class="text-center border" style="background: #afaeae54; min-height: 430px; border-radius: 8px; margin-bottom: 25px;">
                         <img src="static/{{ user.image_url }}" alt="{{ user.name }}" width="150px" height="200px">
                         <h4 style="padding: 10px 0;"><a href="{{ user.profile_link }}">{{ user.full_name }}</a></h4>
-                        <p style="height: 50px;">{{ user.bio }}</p>
-                        <p style="font-size: 24px; padding: 3px 0; height: 30px;"><a href="#">{{ user.shop_name }}</a></p>
+                        <p style=" overflow: hidden;
+                                       text-overflow: ellipsis;
+                                       display: -webkit-box;
+                                       -webkit-line-clamp: 5; /* number of lines to show */
+                                       -webkit-box-orient: vertical;">{{ user.bio }}</p>
+                        <p style="font-size: 24px; padding: 5px 0; height: 30px;"><a href="#">{{ user.shop_name }}</a></p>
                         <p style="height: 20px; margin-top: 20px;">Рейтинг: {{ user.rating }}</p>
                     </div>
                 </div>
