--- a/main_site/templates/account/auth_page.html
+++ b/main_site/templates/account/auth_page.html
@@ -10,18 +10,18 @@
         <div class="col-12 col-md-4"></div>
         <div class="col-12 col-md-4" style="margin-top: 0px;">
             <form action="{% url 'auth_sign' %}" class="form-signin">
-              <h1 class="h3 mb-3 font-weight-normal">Авторизация</h1>
+              <h1 class="h3 mb-3 font-weight-normal" style="padding-top: 40px;">Авторизация</h1>
                 <label for="inputEmail" class="sr-only">Логин</label>
                 <input name="username" type="text" id="inputEmail" class="form-control" placeholder="Email address" required=""
                        autofocus="">
                 <label for="inputPassword" class="sr-only">Пароль</label>
                 <input name="password" type="password" id="inputPassword" class="form-control" placeholder="Password" required="">
                 <div class="checkbox mb-3">
-                    <label>
+                    <label style="padding-top: 20px;">
                         <input type="checkbox" value="remember-me"> Remember me
                     </label>
                 </div>
-                <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                <button class="btn btn-lg btn-primary btn-block" type="submit">Вход</button>
             </form>
         </div>
         <div class="col-12 col-md-4"></div>
