--- a/main_site/templates/base_template.html
+++ b/main_site/templates/base_template.html
@@ -55,10 +55,38 @@
     {% block content %}
 
     {% endblock %}
-
-    <div style="background-color: black; min-height: 100px;">
-        <div class="container" style="color: white;">
-            <h2 class="text-center text-capitalize" style="padding-top: 30px;">Copyright $.</h2>
+    <div id="bottom" class="cmsmasters_color_scheme_second" \>
+		<div class="bottom_bg" style="background-color: white;">
+			<div class="bottom_outer">
+				<div class="bottom_inner sidebar_layout_121414">
+                    <aside id="text-3" class="widget widget_text"><h3 class="widgettitle">About Us</h3>
+                        <div class="textwidget"><p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts</p>
+                            <img src="https://handmade-shop.cmsmasters.net/wp-content/uploads/2016/12/payment.png" alt="logo" width="237" height="30"></div>
+                        </aside>
+                        <div style="padding-right:0px; padding-left:0px; overflow:auto; width: 100%; margin:0 auto; max-width:400px; display:inline-block;">
+                            <div style="float:left;text-align:center;">
+                        <h3 class="widgettitle">Useful Links</h3>
+                        <ul class='list'>
+                            <li><a href="https://handmade-shop.cmsmasters.net/about-me/">About Us</a></li>
+                            <li><a href="https://handmade-shop.cmsmasters.net/my-blog/">Blog</a></li></li>
+                            <li><a href="https://handmade-shop.cmsmasters.net/shop-2/">Products</a></li>
+                            <li><a href="https://handmade-shop.cmsmasters.net/contact-us/">Contacts</a></li>
+                        </ul>
+                    </div>
+                    <div style="float:right;text-align:center;">
+                        <h3 class="widgettitle">Follow Us</h3>
+                        <ul class='list'>
+                            <li><a href="https://www.facebook.com/profile.php?id=100010265324329">Facebook</a></li>
+                            <li><a href="https://www.instagram.com/_sweety__peach_/?hl=ru">Instagram</a></li>
+                            <li><a href="https://www.pinterest.cl/optimistttt9/">Pinterest</a></li>
+                        </ul>
+                        <div style="clear:both"></div>
+                    </div>
+                </div>
+                        </div> 
+                    </aside>
+                </div>
+            </div>
         </div>
     </div>
     <!-- Подключение блока с скриптами -->
