--- a/main_site/templates/base_template.html
+++ b/main_site/templates/base_template.html
@@ -16,19 +16,20 @@
         {% block head %}
 
         {% endblock %}
+
     </head>
     <body>
     <div style="background: rgb(255, 255, 255);">
         <div class="container">
             <header class="blog-header py-3">
-            <div class="row flex-nowrap justify-content-between align-items-center border-bottom">
+            <div class="row flex-nowrap justify-content-between align-items-end border-bottom">
                 <div class="col-4 pt-1">
-                    <a class="btn btn-sm btn-outline-danger" href="/">Главная</a>
+
                 </div>
-                <div class="col-4 text-center" style="height: 55px;">
-                    <a class="blog-header-logo text-dark" href="{{ request.get_full_path }}"><img src="{% static "images/logo.png" %}" alt="Logo" width="200" height="50"></a>
+                <div class="col-4 text-center" style="height: 225px;">
+                    <a class="blog-header-logo text-dark" href="{{ request.get_full_path }}"><img src="{% static "/images/logo (1).png" %}" alt="Logo" width="390" height="221"></a>
                 </div>
-                <div class="col-4 d-flex justify-content-end align-items-center">
+                <div class="col-4 d-flex justify-content-end align-items-end">
                     {% if user.is_authenticated or user.id %}
                         <a class="btn btn-sm btn-outline-danger" href="{% url 'shop_card' user.id %}">Корзина({{ card_products_count }})</a>
                         <a class="btn btn-sm btn-outline-danger" href="{% url 'user_page' user.id %}">Профиль</a>
@@ -40,16 +41,28 @@
                 </div>
             </div>
         </header>
-        <div class="nav-scroller py-1 mb-2">
-            <nav class="nav d-flex justify-content-between">
-                <a class="btn btn-danger" href="#">Мастер-классы</a>
-                <a class="btn btn-danger" href="#">Магазины</a>
-                <a class="btn btn-danger" href="#">Пользователи</a>
-                <a class="btn btn-danger" href="#">Помощь</a>
-            </nav>
-        </div>
+        <div id="navbar">
+        <ul class="nav justify-content-center" style="padding-bottom: 15px">
+            <li class="nav-item">
+              <a class="nav-link active" style="color: gray; font-size: 20px; ;" href="#">Главная</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Мастер-классы</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Магазины</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Пользователи</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" style="color: gray; font-size: 20px;" href="#">Помощь</a>
+              </li>
+          </ul>
         </div>
     </div>
+</div>
+
 
     <!-- Подключение блока с основным контентом -->
     {% block content %}
@@ -59,7 +72,7 @@
 		<div class="bottom_bg" style="background-color: white;">
 			<div class="bottom_outer">
 				<div class="bottom_inner sidebar_layout_121414">
-                    <aside id="text-3" class="widget widget_text"><h3 class="widgettitle">About Us</h3>
+                    <h3 class="widgettitle">About Us</h3>
                         <div class="textwidget"><p>Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts</p>
                             <img src="https://handmade-shop.cmsmasters.net/wp-content/uploads/2016/12/payment.png" alt="logo" width="237" height="30"></div>
                         </aside>
