--- a/main_site/templates/home_page.html
+++ b/main_site/templates/home_page.html
@@ -37,11 +37,11 @@
 
 <!-- Подключение блока с основным контентом -->
 {% block content %}
-<div style="min-height: 500px;">
-    <div class="container" style="text-align: center; padding: 100px;">
-        <h2 class="w3-wide">THE BAND</h2>
-        <p class="w3-opacity"><i>Made with love</i></p>
-        <p class="w3-justify"> Это уникальный портал мастеров на все руки, который соединил в себе магазин авторских работ, пространство для общения и обмена опытом всех творческих людей, а также стал платформой для открытия и развития собственного бизнеса.</p>
+<div style="min-height: 650px;">
+    <div class="container" style="text-align: center; padding-top: 25px;" >
+        <!--<h2 class="w3-wide">THE BAND</h2>
+        <p class="w3-opacity"><i>Made with love</i></p> -->
+        <img src="static/images/836442.png" alt="Logo" width="600" height="600">
     </div>
 </div>
 <div style="background-image: url('static/images/flat.jpg'); background-size: cover; min-height: 700px;">
