--- a/creative_blog/templates/blog.html
+++ b/creative_blog/templates/blog.html
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block content %}
-    <div class="container">
+    <div class="container" style="width:800px">
         <div class="row" style="margin: 30px 0;">
             <div class="col-12 col-md-4">
                 <img src="https://banner2.cleanpng.com/20180401/kve/kisspng-user-profile-computer-icons-male-id-5ac19772b4d884.3909818215226366587408.jpg" alt="Юзер лого" style="height: 25vh; width: 25vh;">
@@ -29,7 +29,7 @@
                 <div class="content-grid-info">
                     <h3><a href="{% url 'article' article.id %}">{{ article.title }}</a></h3>
                     <p>{{ article.text }}</p>
-                    <img src="https://mir-s3-cdn-cf.behance.net/project_modules/1400/c696cd68860857.5b6bde69a1299.png" alt="" height="400px" width="800px">
+                    <img src="/static/images/p870262_5af1a8c389097.jpg" alt="" height="400px" width="300px">
                     <a class="bttn" href="single.html">MORE</a>
                 </div>
             </div>
