--- a/creative_shop/templates/shop_product.html
+++ b/creative_shop/templates/shop_product.html
@@ -6,10 +6,10 @@
 
 {% block content %}
     <div class="container">
-        <div class="card mb-3" style="max-width: 840px;  margin-left: auto;margin-right: auto; margin-top: 50px; ">
+        <div class="card mb-3" style="max-width: 840px;  margin-left: auto;margin-right: auto; margin-top: 20px ; margin-bottom: 30px;">
 	<div class="row no-gutters">
 		<div class="col-md-4" style="margin-top: auto; margin-bottom: auto;">
-			<img src="https://i.pinimg.com/originals/df/f5/a2/dff5a2162694776874477afd208f49d7.jpg" class="card-img" alt="...">
+			<img src="/static/4.jpg" class="card-img" alt="...">
 		</div>
 		<div class="col-md-8">
 			<div class="card-body">
